# sw_explorer

./: .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/characters/: admin.py  importer.py  models.py  tests.py  urls.py  views.py
apps/characters/migrations/: 0001_initial.py  0002_alter_characterscsvfile_options.py
apps/characters/templates/characters/: characterscsvfile_detail.html  characterscsvfile_list.html
apps/characters/templatetags/: custom_text_filters.py
apps/core/: importer.py  models.py  retriever.py  tests.py
sw_explorer/: asgi.py  settings.py  urls.py  wsgi.py
sw_explorer/templates/: base_generic.html
